welcome to new world ;)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nestjs-json-api/source",
+  "name": "@yaser2us/nestjs-json-api-source",
   "version": "0.0.0",
   "license": "MIT",
   "contributors": [
